--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+
+html,
+body,
+#root,
+main {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0px;
+  background-color: #f0efeb;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +22,62 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+}
+
+.canvas {
+  width: 100%;
+  /* display: block; */
+  height: 100%;
+  order: 2;
+  flex: 2;
+}
+
+.overlay {
+  position: relative;
+  order: 1;
+  flex: 1;
+  padding-left: 50px;
+}
+
+svg {
+  width: 40vw;
+  height: 100vh;
+}
+
+/* .name {
+  font-size: 86px;
+} */
+
+@media only screen and (max-aspect-ratio: 8/7) {
+  html,
+  body,
+  #root,
+  main {
+    padding: 0;
+  }
+
+  main {
+    flex-direction: column;
+  }
+
+  .canvas {
+    order: 1;
+  }
+
+  .overlay {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  svg {
+    order: 2;
+    width: 100%;
+    max-width: 100%;
+    height: 50vh;
+  }
 }
